# H3D-app-deploy

./: .replit  Extract_module.py  app_readme.md  dash_tabs.py  grab_csv_files.py  heatmap_dashboard.py  heatmap_dashboard_b.py  heatmap_dashboard_refactor.py  main.py  maskless_df_calibration.ipynb  pixel_scan_dashboard.py  pyproject.toml  requirements.txt  single_csv_dashboard.py  single_csv_dashboard_refactor.py  spectrum_peak_finder.py  testing.py
data/: data_merge.ipynb
data/height_test_data/: Am241_10min_Source12cm_Am241.csv  Am241_10min_Source1cm_Am241.csv  Am241_10min_Source6cm_Am241.csv  Co57_10min_Source12cm_Cs137.csv  Co57_10min_Source1cm_Cs137.csv  Co57_10min_Source6cm_Cs137.csv
data/leaky_pixel_data/: 14892_M010710_20240208-1449__testresults.csv  D394031_Am241.csv  D394031_Cs137.csv  D394534_Am241.csv  D394534_Cs137.csv  D394539_Am241.csv  D394539_Cs137.csv  D395078_Am241.csv  D395078_Cs137.csv  D400278_Am241.csv  D400278_Cs137.csv  D400280_Am241.csv  D400280_Cs137.csv  M10710_REF_EC2409_Thresh_117-132_Test3_Am241.csv  M10710_REF_EC2409_Thresh_117-132_Test3_Cs137.csv
data/module_voltage_data/: Am241-30min-1000V_Am241.csv  Am241-30min-1500V_Am241.csv  Am241-30min-2000V_Am241.csv  Co57-30min-1000V_Cs137.csv  Co57-30min-1500V_Cs137.csv  Co57-30min-2000V_Cs137.csv  Cs137-30min-1000V_Cs137.csv  Cs137-30min-1500V_Cs137.csv  Cs137-30min-2000V_Cs137.csv
data_handling_modules/: extract_module.py  transform_df.py
plotting_modules/: __init__.py  plotly_modules.py  plots.py
streamlit/: app.py  plotting.py
