[tool.poetry]
name = "h3d-app-deploy"
version = "0.1.0"
description = ""
authors = ["John Feng <johnfengphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
dash = "^2.16.0"
icecream = "^2.1.3"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
